Correccion de errores
Solucion a problemas menores

--- a/en/css/app.css
+++ b/en/css/app.css
@@ -71,6 +71,16 @@ Barra de navegacion superior
 	font-size: 10px;
 }
 
+.barra-idiomas > ul > li > a:hover{
+	border: 1px solid #70777F;
+	background-color: #00B35C;
+	color: white;
+	margin: 3px 3px;
+	border-radius: 4px;
+	padding: 0.5rem 0.3rem;
+	font-size: 10px;
+}
+
 .logo a{
 	padding: 0;
 }
