--- a/css/app.css
+++ b/css/app.css
@@ -832,6 +832,16 @@ td{padding:24px; background:#eee;}
 .barra-idiomas > ul > li > a{
 	border: 1px solid #70777F;
 	background-color: #B4C0CF;
+	color: #00B35C;
+	margin: 3px 3px;
+	border-radius: 4px;
+	padding: 0.5rem 0.3rem;
+	font-size: 10px;
+}
+
+.barra-idiomas > ul > li > a:hover{
+	border: 1px solid #70777F;
+	background-color: #00B35C;
 	color: white;
 	margin: 3px 3px;
 	border-radius: 4px;
